alb/nginx-deploy-svc.yaml
# nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: belwalrohit642/nginx:79 # Replace with your Docker image
        ports:
        - containerPort: 80

---

# nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-statefulset-service    # To create Network Load Balancer
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
